Remove reference to common.js.
Reviewed by @tolmasky.

--- a/buffer/index.html
+++ b/buffer/index.html
@@ -344,4 +344,4 @@ the character encoding of <code class="inline">string</code>.</p></div></div><di
         configuration.clearParentContents = true;
         var notebook = RunKit.createNotebook(configuration);
         </script></div></code></div></div></section><section class="css-k008qs"><div class="css-17bai9i"><div class="css-1deafrq"><h3>buffer.constants.MAX_STRING_LENGTH</h3><span></span><ul><li>{integer} The largest length allowed for a single <code class="inline">string</code> instance.</li></ul><p>Represents the largest <code class="inline">length</code> that a <code class="inline">string</code> primitive can have, counted
-in UTF-16 code units.</p><p>This value may depend on the JS engine that is being used.</p></div></div><div class="css-lmvmh4"><div class="css-rpwxhi"></div></div></section></div></main></body><script src="/assets/common.js"></script></body></html>
+in UTF-16 code units.</p><p>This value may depend on the JS engine that is being used.</p></div></div><div class="css-lmvmh4"><div class="css-rpwxhi"></div></div></section></div></main></body></body></html>
