--- a/vm/index.html
+++ b/vm/index.html
@@ -242,4 +242,4 @@ requires a separate process.</p></div></div><div class="css-lmvmh4"><div class="
         configuration.source = RunKit.sourceFromElement(target);
         configuration.clearParentContents = true;
         var notebook = RunKit.createNotebook(configuration);
-        </script></div></code></div></div></section></div></main></body><script src="/assets/common.js"></script></body></html>
+        </script></div></code></div></div></section></div></main></body></body></html>
