--- a/vm_/index.html
+++ b/vm_/index.html
@@ -710,4 +710,4 @@ internally with a new instance of a V8 Context. This V8 Context provides the
 <code class="inline">code</code> run using the <code class="inline">vm</code> module&#x27;s methods with an isolated global environment
 within which it can operate. The process of creating the V8 Context and
 associating it with the <code class="inline">sandbox</code> object is what this document refers to as
-&quot;contextifying&quot; the <code class="inline">sandbox</code>.</p></div></div><div class="css-lmvmh4"><div class="css-rpwxhi"></div></div></section></div></main></body><script src="/assets/common.js"></script></body></html>
+&quot;contextifying&quot; the <code class="inline">sandbox</code>.</p></div></div><div class="css-lmvmh4"><div class="css-rpwxhi"></div></div></section></div></main></body></body></html>
